--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .animation-delay-2000 {
+    animation-delay: 2s;
+  }
+  .animation-delay-7000 {
+    animation-delay: 7s;
+  }
+  .animation-delay-11000 {
+    animation-delay: 11s;
+  }
+}
