--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,11 +3,20 @@
 @tailwind utilities;
 
 @layer utilities {
+  .animation-delay-1000 {
+    animation-delay: 1s;
+  }
   .animation-delay-2000 {
     animation-delay: 2s;
   }
+  .animation-delay-3000 {
+    animation-delay: 3s;
+  }
   .animation-delay-7000 {
     animation-delay: 7s;
+  }
+  .animation-delay-8000 {
+    animation-delay: 8s;
   }
   .animation-delay-11000 {
     animation-delay: 11s;
